# nayan

./: .detoxrc.js  .editorconfig  .eslintrc.js  .gitignore  .prettierrc.js  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.md  SECURITY.md  admin_public.pem  app.json  crash.txt  jest.config.e2e.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-android.yml  ci-ios.yml  e2e-detox.yml  lint-native.yml
.husky/: commit-msg  pre-commit
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  README.md  jni_bridge.cpp
android/app/src/main/cpp/lsh/: LSHProjection.cpp  LSHProjection.h
cpp/: CMakeLists.txt  README.md
cpp/antispoof/: DepthCueChecker.cpp  DepthCueChecker.h  FFTTextureAnalyzer.cpp  FFTTextureAnalyzer.h  README.md
cpp/clahe/: AdaptiveClipController.cpp  AdaptiveClipController.h  CLAHEEngine.cpp  CLAHEEngine.h  ColorSpaceConverter.cpp  ColorSpaceConverter.h  README.md
cpp/common/: MathUtils.cpp  MathUtils.h  README.md  ThreadSafety.h  Types.h
cpp/crypto/: AESGCMCipher.cpp  AESGCMCipher.h  README.md  SHA256Hasher.cpp  SHA256Hasher.h
cpp/frame-processor/: FrameProcessorPlugin.cpp  FrameProcessorPlugin.h  JSIHostObject.cpp  JSIHostObject.h  PixelBufferPool.cpp  PixelBufferPool.h  README.md
cpp/inference/: CentroidCalculator.cpp  CentroidCalculator.h  DelegateFactory.cpp  DelegateFactory.h  EmbeddingAverager.cpp  EmbeddingAverager.h  MobileFaceNetRunner.cpp  MobileFaceNetRunner.h  README.md  TFLiteInterpreterManager.cpp  TFLiteInterpreterManager.h
cpp/landmarks/: EARCalculator.cpp  EARCalculator.h  FaceMeshEngine.cpp  FaceMeshEngine.h  FaceMeshRunner.cpp  FaceMeshRunner.h  HeadPoseEstimator.cpp  HeadPoseEstimator.h  LivenessFSM.cpp  LivenessFSM.h  MARCalculator.cpp  MARCalculator.h  MockLivenessRunner.cpp  README.md
cpp/ledger/: CipherLedger.h
cpp/s3_sync/: S3SyncService.h
deploy/aws/cloudformation/: README.md  template.yml
deploy/docker/: Dockerfile.ci  README.md
deploy/fastlane/: Appfile  Fastfile  README.md
docs/architecture/: README.md  data-flow.md  system-overview.md  threading-model.md
docs/benchmarks/: README.md  accuracy-report.md  device-matrix.md  latency-report.md
docs/demo/: README.md  demo-script.md  recording-guide.md
docs/licenses/: README.md  dependency-audit.md
docs/security/: README.md  crypto-audit.md  threat-model.md
docs/setup/: README.md  build-instructions.md  development-setup.md
ios/: DeviceIdentityModule.m  DeviceIdentityModule.swift  NayanNativeEngine.podspec  Podfile
ios/OfflineFaceAuth/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  OfflineFaceAuth.entitlements
ios/OfflineFaceAuth.xcodeproj/: project.pbxproj
ios/OfflineFaceAuthTests/: OfflineFaceAuthTests.m
models/: model_manifest.json
models/benchmarks/: README.md
models/facemesh/: README.md  model_card.md
models/mobilefacenet/: README.md  convert_to_tflite.py  model_card.md
scripts/: README.md  build-android.sh  build-ios.sh  generate_hyperplanes.js  lint-cpp.sh  run-benchmarks.sh  run-e2e.sh  seed-demo-data.ts  verify-licenses.sh  verify-model-bundle.js
src/: App.tsx  m3readme.md
src/__tests__/: crypto.test.ts  ledger.test.ts  ledgerIntegration.test.ts  lshBenchmark.test.ts
src/config/: README.md  api.ts  app.config.ts  env.ts  thresholds.ts
src/crypto/: AdminEscrow.ts  AdminKey.ts  EmbeddingCrypto.ts  LSHHyperplanes.ts  LSHModule.ts  NativeSecureKey.ts  RSAOAEP.ts  SHA256.ts
src/native/: NativeUptimeClock.ts
src/screens/: EnrollmentScreen.tsx  HomeScreen.tsx  LedgerScreen.tsx  README.md  SettingsScreen.tsx  SyncStatusScreen.tsx  VerificationScreen.tsx
src/services/: deviceKey.ts  erasure.ts  uploadDeletionReceipt.ts
src/storage/: EnrollmentService.ts  ErasureService.ts  EventCounter.ts  LSHIndex.ts  LedgerService.ts  VerificationService.ts  WALCheckpointScheduler.ts
src/types/: README.md  attendance.ts  liveness.ts  native.ts  personnel.ts  sync.ts
src/utils/: BufferUtils.ts  README.md  canonicalJSON.ts  logger.ts  timestamp.ts  uuid.ts
tests/: GO_NO_GO_CHECKLIST.md  INTEGRATION_TEST_REPORT.md  PHYSICAL_DEVICE_CHECKLIST.md
tests/e2e/: .detoxrc.js  E2E_EXECUTION_REPORT.md  README.md  airplane-mode.e2e.ts  antispoof.e2e.ts  enrollment.e2e.ts  verification.e2e.ts
tests/fixtures/: README.md  mock-embeddings.json  mock-landmarks.json
tests/integration/: README.md  enrollment-flow.test.ts  sync-flow.test.ts  tamper-detection.test.ts  verification-flow.test.ts
(+117 files in other folders)
